# panModelScanner

./: .dockerignore  .env  .gitignore  .readme.md  Dockerfile  README.md  build.sh  chatbot_airs.py  compose.yml  extract_secrets.sh  main.py  model_scan.sh  pyproject.toml  requirements.txt  run.sh  scan-huggingface.py  scan_hf_models.py  test_new_features.py  web_app.py
base_stuff/: ca.crt  get_api_key.py  scan-huggingface.py  test_scanner.py  test_web_app.py
changes1.3/: Dockerfile  deployment.yaml  web_app.py
kubernetes/: deployment.yaml  service.yaml
templates/: index.html
