[project]
name = "airs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0.0",
    "huggingface_hub>=0.20.0"
]

[[tool.uv.index]]
url = "https://us-west1-python.pkg.dev/pairs-modelsec-prd-l9mu/ms-prod-usw1-mp-main-pypi/simple/"
