[project]
name = "pan-model-scanner-ui"
version = "1.2"
description = "PAN Model Security Scanner UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0.0",
    "huggingface_hub>=0.20.0",
    "boto3>=1.42.0",
    "google-cloud-storage>=3.9.0",
    "azure-storage-blob>=12.28.0",
    "requests>=2.32.0"
]
